# huffman

./: CMakeLists.txt  README.md
src/: _main.c  _main.h  main.c
src/compression/: 1_standard_huffman.c  1_standard_huffman.h  2_adaptive_huffman.c  2_adaptive_huffman.h  3_adaptive_huffman_slide.c  3_adaptive_huffman_slide.h  4_adaptive_huffman_twopass.c  4_adaptive_huffman_twopass.h  5_adaptive_huffman_block.c  5_adaptive_huffman_block.h
src/data/adaptive_tree/: adaptive_tree.c  adaptive_tree.h
src/data/linked_list/: linked_list.c  linked_list.h
src/data/standard_tree/: standard_tree.c  standard_tree.h
src/io/: file_read.c  file_read.h  file_write.c  file_write.h  ra_file.c  ra_file.h
src/util/: error.c  error.h  memory.c  memory.h  util.h
tests/: minunit.c  minunit.h  test_main.c
tests/compression/: test_huffman.c  test_huffman.h
tests/files/: DoubleChars.txt  Kapot.txt  LoremIpsumCopy.txt  SingleChar.txt
